--- a/.slsa-goreleaser.yml
+++ b/.slsa-goreleaser.yml
@@ -12,14 +12,10 @@ flags:
   - -tags=netgo
 
 # The OS to compile for. `GOOS` env variable will be set to this value.
-goos:
-  - darwin
-  - linux
+goos: linux
 
 # The architecture to compile for. `GOARCH` env variable will be set to this value.
-goarch:
-  - amd64
-  - arm64
+goarch: amd64
 
 # (Optional) Entrypoint to compile.
 # main: ./path/to/main.go
