fix 🐛 (docker): fixed Dockerfile
Had issues with building the image locally, so the current changes should work

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
 .github
+.git
 .vscode
 /notes
 /skins
 README.md
 LICENSE
 .gitignore
-.go*.yml
+.golangci.yaml
+.goreleaser.yaml
 config-example.yml
