fix 🐛 (goreleaser): dockers and docker-manifest fixes
- added correct docker package registry

Signed-off-by: moualhi zine el abidine <zmoualhi@outlook.com>

--- a/.github/workflows/go-releaser.yml
+++ b/.github/workflows/go-releaser.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
+    # env:
+    #   DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
       - name: Check out code 
         uses: actions/checkout@v4.1.1
