--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -60,7 +60,7 @@ linters-settings:
       regexp:
         PROJECT: 'Akslifecycle'
     template: |-
-      SPDX-License-Identifier: Apache-2.0
+      SPDX-License-Identifier: GPL-3.0
       Copyright Authors of {{ PROJECT }}
   gosec:
     includes:
