--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,8 +13,8 @@ builds:
   - arm64
   env:
   - CGO_ENABLED=0
-  # ldflags:
-  # - -s -w -X github.com/muandane/akslifecycle/cmd.version={{.Version}}
+  ldflags:
+  - -s -w
 
 release:
   prerelease: auto
@@ -43,14 +43,18 @@ dockers:
   goos: linux
   goarch: amd64
   image_templates:
-  - "simplifi-ed/{{ .ProjectName }}:{{ .Version }}-amd64"
-  - "simplifi-ed/{{ .ProjectName }}:latest-amd64"
+  - "ghcr.io/simplifi-ed/{{ .ProjectName }}:{{ .Version }}-amd64"
+  - "ghcr.io/simplifi-ed/{{ .ProjectName }}:latest-amd64"
   build_flag_templates:
   - "--platform=linux/amd64"
   - "--label=org.opencontainers.image.created={{.Date}}"
   - "--label=org.opencontainers.image.title={{.ProjectName}}"
+  - "--label=org.opencontainers.image.description={{ .ProjectName }}"
+  - "--label=org.opencontainers.image.url=https://github.com/Simplifi-ED/{{ .ProjectName }}"
+  - "--label=org.opencontainers.image.source=https://github.com/Simplifi-ED/{{ .ProjectName }}"
   - "--label=org.opencontainers.image.revision={{.FullCommit}}"
   - "--label=org.opencontainers.image.version={{.Version}}"
+  - "--label=org.opencontainers.image.licenses=GPL-3.0"
   extra_files:
   - go.mod
   - go.sum
@@ -63,14 +67,18 @@ dockers:
   goos: linux
   goarch: arm64
   image_templates:
-  - "simplifi-ed/{{ .ProjectName }}:{{ .Version }}-armv64"
-  - "simplifi-ed/{{ .ProjectName }}:latest-armv7"
+  - "ghcr.io/simplifi-ed/{{ .ProjectName }}:{{ .Version }}-armv64v8"
+  - "ghcr.io/simplifi-ed/{{ .ProjectName }}:latest-armv64"
   build_flag_templates:
-  - "--platform=linux/arm64"
+  - "--platform=linux/arm64/v8"
   - "--label=org.opencontainers.image.created={{.Date}}"
   - "--label=org.opencontainers.image.title={{.ProjectName}}"
+  - "--label=org.opencontainers.image.description={{ .ProjectName }}"
+  - "--label=org.opencontainers.image.url=https://github.com/Simplifi-ED/{{ .ProjectName }}"
+  - "--label=org.opencontainers.image.source=https://github.com/Simplifi-ED/{{ .ProjectName }}"
   - "--label=org.opencontainers.image.revision={{.FullCommit}}"
   - "--label=org.opencontainers.image.version={{.Version}}"
+  - "--label=org.opencontainers.image.licenses=GPL-3.0"
   extra_files:
   - go.mod
   - go.sum
@@ -79,18 +87,14 @@ dockers:
   - internal/azure.go
   - cmd/root.go
   - main.go
+
 docker_manifests:
-- name_template: simplifi-ed/{{ .ProjectName }}:{{ .Version }}
+- name_template: ghcr.io/simplifi-ed/{{ .ProjectName }}:{{ .Version }}
   image_templates:
-  - simplifi-ed/{{ .ProjectName }}:{{ .Version }}-amd64
-  - simplifi-ed/{{ .ProjectName }}:{{ .Version }}-armv64
-- name_template: simplifi-ed/{{ .ProjectName }}:latest
+  - ghcr.io/simplifi-ed/{{ .ProjectName }}:{{ .Version }}-amd64
+  - ghcr.io/simplifi-ed/{{ .ProjectName }}:{{ .Version }}-armv64v8
+- name_template: ghcr.io/simplifi-ed/{{ .ProjectName }}:latest
   image_templates:
-  - simplifi-ed/{{ .ProjectName }}:latest-amd64
-  - simplifi-ed/{{ .ProjectName }}:latest-armv64
+  - ghcr.io/simplifi-ed/{{ .ProjectName }}:latest-amd64
+  - ghcr.io/simplifi-ed/{{ .ProjectName }}:latest-armv64v8
 
-snapshot:
-  name_template: "{{ incpatch .Version }}-SNAPSHOT"
-
-source:
-  enabled: true
