--- a/.github/workflows/go-releaser.yml
+++ b/.github/workflows/go-releaser.yml
@@ -18,6 +18,16 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
+
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v3.0.0
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PUBLISHER_TOKEN }}
+
       - name: Set up Go
         uses: actions/setup-go@v4.1.0
         with:
