--- a/.github/workflows/go-releaser.yml
+++ b/.github/workflows/go-releaser.yml
@@ -11,8 +11,8 @@ permissions:
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
-    # env:
-    #   DOCKER_CLI_EXPERIMENTAL: "enabled"
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
       - name: Check out code 
         uses: actions/checkout@v4.1.1
@@ -36,9 +36,7 @@ jobs:
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5.0.0
         with:
-          distribution: goreleaser
-          version: ${{ env.GITHUB_REF_NAME }}
+          version: latest
           args: release --clean
-          workdir: ./
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
