deprecate ⚰️ (lifecycle): depracting the use of os.exec("az")
Deprecating the use of az cli to perform actions on the nodepools in favor of the use of azure go sdk

--- a/config-example.yml
+++ b/config-example.yml
@@ -1,13 +1,13 @@
 resources:
 - ResourceGroupName: rg-cluster-1
   ClusterName: aks-cluster-1
-  nodePools:
+  NodePools:
   - nodepool1
   startSchedule: "2 14 * * 1-5"
   stopSchedule: "36 14 * * 1-5"
 - ResourceGroupName: rg-cluster-2
   ClusterName: aks-cluster-2
-  nodePools:
+  NodePools:
   - nodepool2
   startSchedule: "2 14 * * 1-5"
   stopSchedule: "36 14 * * 1-5"
